// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo test cases Should render logo 1`] = `
<DocumentFragment>
  <header
    class="css-xfxmb9"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;

exports[`Logo test cases Should render logo with custom size 1`] = `
<DocumentFragment>
  <header
    class="css-av4qpb"
    size="5"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;
